namespace ObserverPattern.TradingApp;

public class Crypto : Asset
{
    public Crypto(string baseCurrency,string quoteCurrency) : base(baseCurrency,quoteCurrency)
    {
    }
}