namespace ObserverPattern.TradingApp;

public interface IObserver
{
    public void Update(Asset? asset);
}



